# django_saas

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
infra/nginx/: default.conf
infra/postgresql/: Dockerfile
src/: Dockerfile  conftest.py  entrypoint.sh
src/api/: __init__.py  v1.py
src/contacts/: models.py  schemas.py  views.py
src/contacts/migrations/: 0001_initial.py  0002_alter_contact_phone.py
src/core/: .env.example  settings.py  urls.py
src/static/devtools/: index.html  script.js  style.css
src/tenants/: admin.py  middlewares.py  models.py
src/tenants/management/commands/: init_public_tenant.py
src/tenants/migrations/: 0001_initial.py
src/tests/: contact_tests.py
src/users/: admin.py  models.py
src/users/migrations/: 0001_initial.py
src/utilities/: decorators.py  paginators.py
